--- a/src/lib/Components/Button.css
+++ b/src/lib/Components/Button.css
@@ -23,6 +23,7 @@
  border-radius: var(--standard-padding);
  background-color: var(--bg-1);
  text-align: start;
+ gap: 0.2rem;
 }
 
 .regular-vision .btn.nav {
