--- a/src/lib/Components/PageContent.css
+++ b/src/lib/Components/PageContent.css
@@ -10,3 +10,9 @@
  max-width: 400px;
  margin: 1rem auto;
 }
+
+@media (max-width: 400px) {
+ .regular-vision .page-content {
+  margin: 1rem;
+ }
+}
