SelectableCard, EllipsisButton added

--- a/src/lib/Shared.css
+++ b/src/lib/Shared.css
@@ -16,6 +16,7 @@
  --blue: #32327d;
  --green: #3b6d37;
  --red: #bb2901;
+ --selected: #353d2f;
  --input-border: rgba(255, 255, 255, 0.1);
  --montserrat-height-surplus: calc(3.5 / 16);
  --standard-gap: 0.3rem;
