--- a/src/lib/Shared.css
+++ b/src/lib/Shared.css
@@ -18,6 +18,8 @@
  --red: #bb2901;
  --selected: #353d2f;
  --input-border: rgba(255, 255, 255, 0.1);
+ --ellipsis: #9898d6;
+ --divider: rgba(152, 152, 214, 0.5);
  --montserrat-height-surplus: calc(3.5 / 16);
  --standard-gap: 0.3rem;
  --regular-vision-gap: 0.75rem;
