--- a/src/lib/Components/SuggestiveInput.css
+++ b/src/lib/Components/SuggestiveInput.css
@@ -10,17 +10,25 @@
   1rem + var(--montserrat-height-surplus) * 1rem + 2 * var(--standard-padding) +
    2px
  );
+ padding: 0 var(--standard-padding);
  gap: 0;
- background-color: var(--bg-1);
+ background-color: var(--bg-2);
  width: 100%;
  max-height: 60vh;
  overflow-y: scroll;
- z-index: 1;
+ z-index: 2;
 }
 
 .suggestive-input-wrapper li {
- padding: var(--standard-padding);
- border: 1px solid transparent;
+ padding: var(--standard-padding) 0;
+ border-left: 1px solid transparent;
+ border-right: 1px solid transparent;
+ border-top: 1px solid transparent;
+ border-bottom: 1px solid var(--input-border);
  cursor: pointer;
- z-index: 1;
+ z-index: 2;
+}
+
+.suggestive-input-wrapper li:last-child {
+ border-bottom: 1px solid transparent;
 }
